# simple-poems

./: .gitignore  pyproject.toml
simple_poems/: __init__.py  database.py  routes.py  schemas.py  world.py
templates/: index.html  upload.html
